# ConversationalAI-Embedded-Kit-2.0

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  THIRD_PARTY_NOTICE
cmake/: common.cmake  espressif.cmake  macos.cmake
common/sdk/inc/: volc_conv_ai.h
common/sdk/src/: volc_conv_ai.c
common/sdk/src/base/: volc_device_manager.h
common/sdk/src/util/: volc_auth.c  volc_base64.c  volc_log.h
examples/high_quality_solution/espressif/: README.md  sdkconfig
examples/high_quality_solution/espressif/main/: Kconfig.projbuild  configuration_ap.c  conv_ai_embedded_kit.c  idf_component.yml  network.c  pipeline.c  pipeline.h
examples/high_quality_solution/macos/: CMakeLists.txt  README.md
examples/high_quality_solution/macos/configs/: conv_ai_config.json
examples/high_quality_solution/macos/util/: volc_ringbuf.h
examples/low_load_solution/espressif/: README.md  sdkconfig
examples/low_load_solution/espressif/main/: CMakeLists.txt  Kconfig.projbuild  conv_ai_embedded_kit.c  idf_component.yml  pipeline.c  pipeline.h
examples/low_load_solution/macos/: CMakeLists.txt  README.md  volc_conv_ai_demo.c
examples/low_load_solution/macos/configs/: conv_ai_config.json
examples/low_load_solution/macos/util/: volc_ringbuf.c
high_quality_first/common/src/: volc_rtc.c
high_quality_first/espressif/: README.md
high_quality_first/espressif/components/conv_ai/: CMakeLists.txt
high_quality_first/espressif/components/volc_engine_rtc_lite/: CMakeLists.txt
high_quality_first/espressif/components/volc_engine_rtc_lite/inc/: VolcEngineRTCLite.h
high_quality_first/espressif/main/: conv_ai_embedded_kit.c  idf_component.yml  network.c
low_load_first/common/inc/: volc_ws.h
low_load_first/common/src/: volc_ws.c
low_load_first/espressif/: 0001-esp_peripherals-Support-ADC-API-of-IDF-5.x-in-adc_bu.patch  README.md  sdkconfig
low_load_first/espressif/components/conv_ai/: CMakeLists.txt  README.md
low_load_first/espressif/components/conv_ai/inc/: volc_conv_ai.h
low_load_first/espressif/components/conv_ai/src/: volc_conv_ai.c
low_load_first/espressif/main/: CMakeLists.txt  Kconfig.projbuild  common.h  configuration_ap.c  configuration_ap.h  conv_ai_embedded_kit.c  idf_component.yml  network.c  network.h  pipeline.c  pipeline.h
volc_conv_ai/: CMakeLists.txt
volc_conv_ai/cmake/: common.cmake  espressif.cmake  macos.cmake
volc_conv_ai/inc/: volc_conv_ai.h
volc_conv_ai/src/: volc_conv_ai.c
volc_conv_ai/src/base/: volc_base.h  volc_device_manager.c
volc_conv_ai/src/transports/high_quality/inc/: volc_rtc.h
volc_conv_ai/src/transports/high_quality/src/: volc_rtc.c
volc_conv_ai/src/transports/low_load/inc/: volc_ws.h
volc_conv_ai/src/transports/low_load/src/: volc_ws.c
volc_conv_ai/src/util/: volc_auth.h  volc_http.c  volc_json.c  volc_json.h  volc_log.h
(+19 files in other folders)
